@@ -1,6 +1,6 @@
 AC_INIT
 AC_CONFIG_SRCDIR([src/FC.cpp])
-AM_INIT_AUTOMAKE(audacious-plugin-fc, 0.3)
+AM_INIT_AUTOMAKE(audacious-plugin-fc, 0.4)
 AC_CONFIG_HEADERS([src/Config.h])
 
 AC_CANONICAL_HOST
@@ -23,7 +23,7 @@ AC_CHECK_SIZEOF(long int)
 
 AC_HEADER_STDC
 
-PKG_CHECK_MODULES(AUDACIOUS, audacious >= 2.0.1)
+PKG_CHECK_MODULES(AUDACIOUS, audacious >= 2.2)
 if test "x$AUDACIOUS_LIBS" != "x"; then
    CFLAGS="$CFLAGS $AUDACIOUS_CFLAGS"
    CXXFLAGS="$CXXFLAGS $AUDACIOUS_CFLAGS"
